Fix spacing by setting max-width and enforce space-between.

--- a/static/css/devhub/new-landing/sections/more-information.less
+++ b/static/css/devhub/new-landing/sections/more-information.less
@@ -2,6 +2,7 @@
   > div {
     display: flex;
     flex-flow: column;
+    justify-content: space-between;
 
     @media @medium {
       flex-flow: row nowrap;
@@ -14,6 +15,7 @@
 .DevHub-Tools {
   line-height: 1.5;
   margin: 20px 0 auto;
+  max-width: 420px;
 
   h2,
   h2 a {
@@ -29,7 +31,6 @@
   ul {
     list-style: none;
     padding: 0;
-    width: 90%;
 
     li {
       a {
